Fixed text marked text alignment (#34)
* Changed Path

* Tweak

* Revert "Tweak"

This reverts commit b20e7f992378ae20b9054ad3fdb361a1fd6f0bcd.

* Revert "Changed Path"

This reverts commit 07439200f55a069d5ee4eef3578cfcd9effaf569.

* Tweak

* Updated incorrect

* Fixed text marked text alignment

--- a/assets/css/web.css
+++ b/assets/css/web.css
@@ -10,6 +10,9 @@
 #map-area {
 	margin-top: 0.5%;
 }
+#imgbox {
+	position: relative;
+  }
 #question-area {
 	position: fixed;
 	right: 0.5%;
